examples/istio-networking/opensds.yaml
# Copyright (c) 2019 Huawei Technologies Co., Ltd. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##################################################################################################
# Apiserver service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  labels:
    app: apiserver
    service: apiserver
spec:
  ports:
  - port: 50040
    name: http
  selector:
    app: apiserver
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apiserver-v1beta
  labels:
    app: apiserver
    version: v1beta
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apiserver
        version: v1beta
    spec:
      containers:
      - name: apiserver
        image: opensdsio/opensds-apiserver:latest
        imagePullPolicy: IfNotPresent
        command: ["bin/sh"]
        args: ["-c", "/usr/bin/osdsapiserver -logtostderr"]
        ports:
        - containerPort: 50040
        volumeMounts:
        - name: opensds-conf-dir
          mountPath: /etc/opensds
      volumes:
      - name: opensds-conf-dir
        hostPath:
          path: /etc/opensds
          type: Directory
---
##################################################################################################
# Controller service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: controller
  labels:
    app: controller
    service: controller
spec:
  ports:
  - port: 50049
    name: http
  selector:
    app: controller
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: controller-v1beta
  labels:
    app: controller
    version: v1beta
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: controller
        version: v1beta
    spec:
      containers:
      - name: controller
        image: opensdsio/opensds-controller:latest
        imagePullPolicy: IfNotPresent
        command: ["bin/sh"]
        args: ["-c", "/usr/bin/osdslet -logtostderr"]
        ports:
        - containerPort: 50049
        volumeMounts:
        - name: opensds-conf-dir
          mountPath: /etc/opensds
      volumes:
        - name: opensds-conf-dir
          hostPath:
            path: /etc/opensds
            type: Directory
---
##################################################################################################
# Dock service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: dock
  labels:
    app: dock
    service: dock
spec:
  ports:
  - port: 50050
    name: http
  selector:
    app: dock
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dock-v1beta
  labels:
    app: dock
    version: v1beta
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dock
        version: v1beta
    spec:
      containers:
        - name: dock
          image: opensdsio/opensds-dock:latest
          imagePullPolicy: IfNotPresent
          command: ["bin/sh"]
          args: ["-c", "/usr/sbin/tgtd; /usr/bin/osdsdock -logtostderr"]
          ports:
            - containerPort: 50050
            - containerPort: 3260
          volumeMounts:
          - name: opensds-conf-dir
            mountPath: /etc/opensds
          - name: ceph-conf-dir
            mountPath: /etc/ceph
          - name: tgt-conf-dir
            mountPath: /etc/tgt
            mountPropagation: "Bidirectional"
          - name: run-dir
            mountPath: /run
            mountPropagation: "Bidirectional"
          - name: dev-dir
            mountPath: /dev
            mountPropagation: "HostToContainer"
          - name: local-time-file
            mountPath: /etc/localtime
            readOnly: true
          - name: lib-modules-dir
            mountPath: /lib/modules
            readOnly: true
      volumes:
        - name: opensds-conf-dir
          hostPath:
            path: /etc/opensds
            type: Directory
        - name: ceph-conf-dir
          hostPath:
            path: /etc/ceph
            type: DirectoryOrCreate
        - name: tgt-conf-dir
          hostPath:
            path: /etc/tgt
            type: Directory
        - name: run-dir
          hostPath:
            path: /run
            type: Directory
        - name: dev-dir
          hostPath:
            path: /dev
            type: Directory
        - name: local-time-file
          hostPath:
            path: /etc/localtime
            type: File
        - name: lib-modules-dir
          hostPath:
            path: /lib/modules
            type: Directory
---
