examples/istio-networking/apiserver-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apiserver-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 50040
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apiserver
spec:
  hosts:
    - "*"
  gateways:
    - apiserver-gateway
  http:
    - route:
        - destination:
            host: apiserver
            port:
              nmuber: 50040
            subset: v1beta
