examples/istio-networking/service-entry-auth.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-keystone-auth
spec:
  hosts:
    - localhost
  location: MESH_EXTERNAL
  ports:
    - number: 5000
      name: example-http
      protocol: HTTP
    resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keystone-auth-rule
spec:
  hosts:
    - localhost
  http:
    - timeout: 10s
      route:
        - destination:
            host: localhost
---
