examples/istio-networking/virtual-service-all.yaml
# Copyright (c) 2019 Huawei Technologies Co., Ltd. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apiserver
spec:
  hosts:
    - apiserver
  http:
    - route:
        - destination:
            host: apiserver
            subset: v1beta
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: controller
spec:
  hosts:
    - controller
  http:
    - route:
        - destination:
            host: controller
            subset: v1beta
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dock
spec:
  hosts:
    - dock
  http:
    - route:
        - destination:
            host: dock
            subset: v1beta
---
